--- a/example/example.html
+++ b/example/example.html
@@ -7,21 +7,25 @@
 		<!-- load the dashboard css -->
 		<link href="../sDashboard.css" rel="stylesheet">
 
+		<link href="http://minitwitter.webdevdesigner.com/jquery.minitwitter.css" rel="stylesheet">
+		<!-- load gitter css -->
+		<link href="css/gitter/css/jquery.gritter.css" rel="stylesheet"/>
 		<!-- load jquery library -->
 		<script src="libs/jquery/jquery-1.8.2.js" type="text/javascript"></script>
 		<!-- load jquery ui library -->
 		<script src="libs/jquery/jquery-ui.js" type="text/javascript"></script>
 
+		<!-- load gitter notification library -->
+		<script src="libs/gitter/jquery.gritter.js" type="text/javascript"></script>
+
 		<!-- load datatables library -->
 		<script src="libs/datatables/jquery.dataTables.js"></script>
 
-		<!-- load flot charting library -->
-		<script src="libs/float/jquery.flot.min.js" type="text/javascript"></script>
+		<!-- load flotr2 charting library -->
 		<!--[if IE]>
-		<script language="javascript" type="text/javascript" src="libs/float/excanvas.min.js"></script>
+		<script language="javascript" type="text/javascript" src="libs/flotr2/flotr2.ie.min.js"></script>
 		<![endif]-->
-		<script src="libs/float/jquery.flot.pie.min.js" type="text/javascript"></script>
-		<script src="libs/float/jquery.flot.selection.js" type="text/javascript"></script>
+		<script src="libs/flotr2/flotr2.js" type="text/javascript"></script>
 
 		<!-- load dashboard library -->
 		<script src="../jquery-sDashboard.js" type="text/javascript"></script>
@@ -29,97 +33,79 @@
 		<!-- theme switcher -->
 		<script src="libs/themeswitcher/jquery.themeswitcher.min.js" type="text/javascript"></script>
 
+		<!-- mini twitter library -->
+		<script src="https://raw.github.com/webdevdesigner/minitwitter/master/jquery.minitwitter.js" type="text/javascript"></script>
+
+		<!-- sample data external script file -->
+		<script src="libs/exampleData.js" type="text/javascript"></script>
 		<!-- example code -->
 		<script type="text/javascript">
 			$(function() {
+				//create a mini twitter div which is external
+
+				$("#myTweets").miniTwitter('ladygaga');
+
 				//Theme switcher plugin
 				$("#switcher").themeswitcher({
 					imgpath : "css/images/",
 					loadTheme : "cupertino"
 				});
 
-				//random pie chart data
-				var data = [];
-				var series = Math.floor(Math.random() * 10) + 1;
-				for (var i = 0; i < series; i++) {
-					data[i] = {
-						label : "Series" + (i + 1),
-						data : Math.floor(Math.random() * 100) + 1
-					}
-				};
-
-				//random pie chart data
-				var data1 = [];
-				var series1 = Math.floor(Math.random() * 10) + 1;
-				for (var i = 0; i < series1; i++) {
-					data1[i] = {
-						label : "Series" + (i + 1),
-						data : Math.floor(Math.random() * 100) + 1
-					}
-				};
-
-				//random table widget data
-				var tableWidgetData = {
-					"aaData" : [["Trident", "Internet Explorer 4.0", "Win 95+"], ["Trident", "Internet Explorer 5.0", "Win 95+"], ["Trident", "Internet Explorer 5.5", "Win 95+"], ["Trident", "Internet Explorer 6.0", "Win 98+"], ["Trident", "Internet Explorer 7.0", "Win XP SP2+"], ["Gecko", "Firefox 1.5", "Win 98+ / OSX.2+"], ["Gecko", "Firefox 2", "Win 98+ / OSX.2+"], ["Gecko", "Firefox 3", "Win 2k+ / OSX.3+"], ["Webkit", "Safari 1.2", "OSX.3"], ["Webkit", "Safari 1.3", "OSX.3"], ["Webkit", "Safari 2.0", "OSX.4+"], ["Webkit", "Safari 3.0", "OSX.4+"]],
-
-					"aoColumns" : [{
-						"sTitle" : "Engine"
-					}, {
-						"sTitle" : "Browser"
-					}, {
-						"sTitle" : "Platform"
-					}]
-				};
-
-				//random bar chart data
-				var d3 = [[0, 3], [4, 8], [8, 5], [9, 13]];
-
-				//random line chart data
-
-				var lineData = [{
-					data : [[1990, 18.9], [1991, 18.7], [1992, 18.4], [1993, 19.3], [1994, 19.5], [1995, 19.3], [1996, 19.4], [1997, 20.2], [1998, 19.8], [1999, 19.9], [2000, 20.4], [2001, 20.1], [2002, 20.0], [2003, 19.8], [2004, 20.4]]
-				}, {
-					data : [[1992, 13.4], [1993, 12.2], [1994, 10.6], [1995, 10.2], [1996, 10.1], [1997, 9.7], [1998, 9.5], [1999, 9.7], [2000, 9.9], [2001, 9.9], [2002, 9.9], [2003, 10.3], [2004, 10.5]]
-				}, {
-					data : [[1990, 10.0], [1991, 11.3], [1992, 9.9], [1993, 9.6], [1994, 9.5], [1995, 9.5], [1996, 9.9], [1997, 9.3], [1998, 9.2], [1999, 9.2], [2000, 9.5], [2001, 9.6], [2002, 9.3], [2003, 9.4], [2004, 9.79]]
-				}, {
-					data : [[1990, 12.4], [1991, 11.2], [1992, 10.8], [1993, 10.5], [1994, 10.4], [1995, 10.2], [1996, 10.5], [1997, 10.2], [1998, 10.1], [1999, 9.6], [2000, 9.7], [2001, 10.0], [2002, 9.7], [2003, 9.8], [2004, 9.79]]
-				}];
-
 				//**********************************************//
 				//dashboard json data
 				//this is the data format that the dashboard framework expects
 				//**********************************************//
+
 				var dashboardJSON = [{
-					widgetTitle : "Donut Widget",
-					widgetId : "id11",
-					widgetType : "pie",
-					isADonut : true,
-					widgetContent : data
-				}, {
-					widgetTitle : "Pie Widget",
-					widgetId : "id12",
-					widgetType : "pie",
-					widgetContent : data1
+					widgetTitle : "Bubble Chart Widget",
+					widgetId : "id009",
+					widgetType : "chart",
+					widgetContent : {
+						data : myExampleData.bubbleChartData,
+						options : myExampleData.bubbleChartOptions
+					}
+
 				}, {
 					widgetTitle : "Table Widget",
 					widgetId : "id3",
 					widgetType : "table",
-					widgetContent : tableWidgetData
-				}, {
-					widgetTitle : "Bar Chart Widget",
-					widgetId : "id1",
-					widgetType : "bar",
-					widgetContent : d3
+					widgetContent : myExampleData.tableWidgetData
 				}, {
 					widgetTitle : "Text Widget",
 					widgetId : "id2",
 					widgetContent : "Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aenean lacinia mollis condimentum. Proin vitae ligula quis ipsum elementum tristique. Vestibulum ut sem erat."
 				}, {
-					widgetTitle : "Line Chart",
-					widgetId : "id23",
-					widgetType : "line",
-					widgetContent : lineData
+					widgetTitle : "Pie Chart Widget",
+					widgetId : "id001",
+					widgetType : "chart",
+					widgetContent : {
+						data : myExampleData.pieChartData,
+						options : myExampleData.pieChartOptions
+					}
+
+				}, {
+					widgetTitle : "bar Chart Widget",
+					widgetId : "id002",
+					widgetType : "chart",
+					widgetContent : {
+						data : myExampleData.barChartData,
+						options : myExampleData.barChartOptions
+					}
+
+				}, {
+					widgetTitle : "line Chart Widget",
+					widgetId : "id003",
+					widgetType : "chart",
+					getDataBySelection : true,
+					widgetContent : {
+						data : myExampleData.lineChartData,
+						options : myExampleData.lineChartOptions
+					}
+
+				}, {
+					widgetTitle : "Lady gaga tweets",
+					widgetId : "tweet123",
+					widgetContent : $("#myTweets")
 				}];
 
 				//basic initialization example
@@ -129,7 +115,12 @@
 
 				//table row clicked event example
 				$("#myDashboard").bind("sdashboardrowclicked", function(e, data) {
-					alert("table row clicked");
+					$.gritter.add({
+						title : 'Table row clicked',
+						time : 1000,
+						text : 'A table row within a table widget has been clicked, please check the console for additional event data'
+					});
+
 					if (console) {
 						console.log("table row clicked, for widget: " + data.selectedWidgetId);
 					}
@@ -137,24 +128,47 @@
 
 				//plot selected event example
 				$("#myDashboard").bind("sdashboardplotselected", function(e, data) {
-					alert("plot selected");
+					$.gritter.add({
+						title : 'Plot selected',
+						time : 1000,
+						text : 'A plot has been selected within a chart widget, please check the console for additional event data'
+					});
 					if (console) {
 						console.log("chart range selected, for widget: " + data.selectedWidgetId);
 					}
 				});
 				//plot click event example
 				$("#myDashboard").bind("sdashboardplotclicked", function(e, data) {
-					alert("plot clicked");
+					$.gritter.add({
+						title : 'Plot Clicked',
+						time : 1000,
+						text : 'A plot has been clicked within a chart widget, please check the console for additional event data'
+					});
 					if (console) {
 						console.log("chart clicked, for widget: " + data.selectedWidgetId);
 					}
 				});
 
+				//widget order changes event example
+				$("#myDashboard").bind("sdashboardorderchanged", function(e, data) {
+					$.gritter.add({
+						title : 'Order Changed',
+						time : 4000,
+						text : 'The widgets order has been changed,check the console for the sorted widget definitions array'
+					});
+					if (console) {
+						console.log("Sorted Array");
+						console.log("+++++++++++++++++++++++++");
+						console.log(data.sortedDefinitions);
+						console.log("+++++++++++++++++++++++++");
+					}
+					
+				});
 				//example for adding a text widget
 				$("#btnAddWidget").click(function() {
 					$("#myDashboard").sDashboard("addWidget", {
 						widgetTitle : "Widget 7",
-						widgetId : "id77",
+						widgetId : "id008",
 						widgetContent : "Lorem ipsum dolor sit amet," + "consectetur adipiscing elit." + "Aenean lacinia mollis condimentum." + "Proin vitae ligula quis ipsum elementum tristique." + "Vestibulum ut sem erat."
 					});
 				});
@@ -162,71 +176,99 @@
 				//example for adding a table widget
 				$("#btnAddTableWidget").click(function() {
 					$("#myDashboard").sDashboard("addWidget", {
-						widgetTitle : "Widget 7",
-						widgetId : "id7",
+						widgetTitle : "Table Widget 2",
+						widgetId : "id007",
 						widgetType : "table",
-						widgetContent : tableWidgetData
+						widgetContent : myExampleData.tableWidgetData
 					});
 
 				});
 
 				//example for  deleting a widget
 				$("#btnDeleteWidget").click(function() {
-					$("#myDashboard").sDashboard("removeWidget", "id7");
+					$("#myDashboard").sDashboard("removeWidget", "id007");
 				});
 
 				//example for adding a pie chart widget
 				$("#btnAddPieChartWidget").click(function() {
-					//construct random pie chart data
-					data = [];
-					series = Math.floor(Math.random() * 10) + 1;
-					for (var i = 0; i < series; i++) {
-						data[i] = {
-							label : "Series" + (i + 1),
-							data : Math.floor(Math.random() * 100) + 1
-						}
-					};
 
 					$("#myDashboard").sDashboard("addWidget", {
-						widgetTitle : "Widget 8",
-						widgetId : "id8",
-						widgetType : "pie",
-						widgetContent : data
+						widgetTitle : "Pie Chart 2",
+						widgetId : "id006",
+						widgetType : "chart",
+						widgetContent : {
+							data : myExampleData.pieChartData,
+							options : myExampleData.pieChartOptions
+						}
 					});
 
 				});
 
 				//example for adding a bar chart widget
 				$("#btnAddBarChartWidget").click(function() {
-					//bar chart plot data
-					var d2 = [[0, 1], [7, 9], [10, 15], [15, 20]];
+
 					$("#myDashboard").sDashboard("addWidget", {
-						widgetTitle : "Widget 15",
-						widgetId : "id15",
-						widgetType : "bar",
-						widgetContent : d2
+						widgetTitle : "Bar Chart 2",
+						widgetId : "id005",
+						widgetType : "chart",
+						widgetContent : {
+							data : myExampleData.barChartData,
+							options : myExampleData.barChartOptions
+						}
 					});
 				});
 
 				//example for adding an line chart widget
 				$("#btnAddLineChartWidget").click(function() {
-					//bar chart plot data
-					var lineData1 = [{
-						data : [[1990, 20], [1991, 30], [1992, 40], [1993, 19.3], [1994, 30], [1995, 19.3], [1996, 19.4], [1997, 30], [1998, 19.8], [1999, 39], [2000, 23.4], [2001, 20.1], [2002, 20.0], [2003, 19.8], [2004, 20.4]]
-					}];
 					$("#myDashboard").sDashboard("addWidget", {
-						widgetTitle : "Line Chart",
-						widgetId : "id65",
-						widgetType : "line",
-						widgetContent : lineData1
+						widgetTitle : "Line Chart 2",
+						widgetId : "id004",
+						widgetType : "chart",
+						getDataBySelection : true,
+						widgetContent : {
+							data : myExampleData.lineChartData,
+							options : myExampleData.lineChartOptions
+						}
+
 					});
 				});
 
-				//example for adding a donut chart widget
-				$("#btnAddDonutChartWidget").click(function() {
-					//construct random pie chart data
-					data = [];
-					series = Math.floor(Math.random() * 10) + 1;
+			});
+
+		</script>
+	</head>
+
+	<body>
+		<label>Features :</label>
+		<button id="btnAddWidget">
+			1) Add Widget
+		</button>
+		<button id="btnAddTableWidget">
+			2) Add Table widget
+		</button>
+		<button id="btnDeleteWidget">
+			3) Delete Table Widget
+		</button>
+		<button id="btnAddPieChartWidget">
+			4) Add Pie Chart widget
+		</button>
+		<button id="btnAddBarChartWidget">
+			5) Add Bar Chart widget
+		</button>
+		<button id="btnAddLineChartWidget">
+			6) Add Line Chart widget
+		</button>
+
+		<div id="switcher" style="float:right;"></div>
+		<hr/>
+		<ul id="myDashboard">
+
+		</ul>
+
+		<div id="myTweets"></div>
+
+	</body>
+</html>th.random() * 10) + 1;
 					for (var i = 0; i < series; i++) {
 						data[i] = {
 							label : "Series" + (i + 1),
