Adding minitwitter library for example folder

--- a/example/example.html
+++ b/example/example.html
@@ -7,7 +7,7 @@
 		<!-- load the dashboard css -->
 		<link href="../sDashboard.css" rel="stylesheet">
 
-		<link href="http://minitwitter.webdevdesigner.com/jquery.minitwitter.css" rel="stylesheet">
+		<link href="css/jquery.minitwitter.css" rel="stylesheet">
 		<!-- load gitter css -->
 		<link href="css/gitter/css/jquery.gritter.css" rel="stylesheet"/>
 		<!-- load jquery library -->
@@ -34,7 +34,7 @@
 		<script src="libs/themeswitcher/jquery.themeswitcher.min.js" type="text/javascript"></script>
 
 		<!-- mini twitter library -->
-		<script src="https://raw.github.com/webdevdesigner/minitwitter/master/jquery.minitwitter.js" type="text/javascript"></script>
+		<script src="libs/miniTwitter/jquery.minitwitter.js" type="text/javascript"></script>
 
 		<!-- sample data external script file -->
 		<script src="libs/exampleData.js" type="text/javascript"></script>
