--- a/example/example.html
+++ b/example/example.html
@@ -7,42 +7,41 @@
 		<!-- load the dashboard css -->
 		<link href="../sDashboard.css" rel="stylesheet">
 
-		<link href="http://minitwitter.webdevdesigner.com/jquery.minitwitter.css" rel="stylesheet">
+		<link href="css/jquery.minitwitter.css" rel="stylesheet">
 		<!-- load gitter css -->
 		<link href="css/gitter/css/jquery.gritter.css" rel="stylesheet"/>
 		<!-- load jquery library -->
-		<script src="libs/jquery/jquery-1.8.2.js" type="text/javascript"></script>
+		<script src="libs/jquery/jquery-1.8.2.js" type="text/javascript"> </script>
 		<!-- load jquery ui library -->
-		<script src="libs/jquery/jquery-ui.js" type="text/javascript"></script>
+		<script src="libs/jquery/jquery-ui.js" type="text/javascript"> </script>
 
 		<!-- load gitter notification library -->
-		<script src="libs/gitter/jquery.gritter.js" type="text/javascript"></script>
+		<script src="libs/gitter/jquery.gritter.js" type="text/javascript"> </script>
 
 		<!-- load datatables library -->
-		<script src="libs/datatables/jquery.dataTables.js"></script>
+		<script src="libs/datatables/jquery.dataTables.js"> </script>
 
 		<!-- load flotr2 charting library -->
 		<!--[if IE]>
 		<script language="javascript" type="text/javascript" src="libs/flotr2/flotr2.ie.min.js"></script>
 		<![endif]-->
-		<script src="libs/flotr2/flotr2.js" type="text/javascript"></script>
-
+		<script src="libs/flotr2/flotr2.js" type="text/javascript"> </script>
+ 
 		<!-- load dashboard library -->
-		<script src="../jquery-sDashboard.js" type="text/javascript"></script>
+		<script src="../jquery-sDashboard.js" type="text/javascript"> </script>
 
 		<!-- theme switcher -->
-		<script src="libs/themeswitcher/jquery.themeswitcher.min.js" type="text/javascript"></script>
+		<script src="libs/themeswitcher/jquery.themeswitcher.min.js" type="text/javascript"> </script>
 
 		<!-- mini twitter library -->
-		<script src="https://raw.github.com/webdevdesigner/minitwitter/master/jquery.minitwitter.js" type="text/javascript"></script>
+		<script src="libs/miniTwitter/jquery.minitwitter.js" type="text/javascript"> </script>
 
 		<!-- sample data external script file -->
-		<script src="libs/exampleData.js" type="text/javascript"></script>
+		<script src="libs/exampleData.js" type="text/javascript"> </script>
 		<!-- example code -->
 		<script type="text/javascript">
 			$(function() {
 				//create a mini twitter div which is external
-
 				$("#myTweets").miniTwitter('ladygaga');
 
 				//Theme switcher plugin
@@ -259,67 +258,14 @@
 			6) Add Line Chart widget
 		</button>
 
-		<div id="switcher" style="float:right;"></div>
+		<div id="switcher" style="float:right;"> </div>
+		
 		<hr/>
 		<ul id="myDashboard">
 
 		</ul>
 
-		<div id="myTweets"></div>
-
-	</body>
-</html>th.random() * 10) + 1;
-					for (var i = 0; i < series; i++) {
-						data[i] = {
-							label : "Series" + (i + 1),
-							data : Math.floor(Math.random() * 100) + 1
-						}
-					};
-
-					$("#myDashboard").sDashboard("addWidget", {
-						widgetTitle : "Donut Chart",
-						widgetId : "id88",
-						widgetType : "pie",
-						isADonut : true,
-						widgetContent : data
-					});
-
-				});
-			});
-
-		</script>
-	</head>
-
-	<body>
-		<label>Features :</label>
-		<button id="btnAddWidget">
-			1) Add Widget
-		</button>
-		<button id="btnAddTableWidget">
-			2) Add Table widget
-		</button>
-		<button id="btnDeleteWidget">
-			3) Delete Widget
-		</button>
-		<button id="btnAddPieChartWidget">
-			4) Add Pie Chart widget
-		</button>
-		<button id="btnAddBarChartWidget">
-			5) Add Bar Chart widget
-		</button>
-		<button id="btnAddLineChartWidget">
-			6) Add Line Chart widget
-		</button>
-
-		<button id="btnAddDonutChartWidget">
-			7) Add Donut Chart widget
-		</button>
-
-		<div id="switcher" style="float:right;"></div>
-		<hr/>
-		<ul id="myDashboard">
-
-		</ul>
+		<div id="myTweets"> </div>
 
 	</body>
 </html>
