--- a/example/example.html
+++ b/example/example.html
@@ -15,6 +15,8 @@
 		<!-- load jquery ui library -->
 		<script src="libs/jquery/jquery-ui.js" type="text/javascript"> </script>
 
+		<!-- load touch punch library to enable dragging on touch based devices -->
+		<script src="libs/touchpunch/jquery.ui.touch-punch.js" type="text/javascript"> </script>
 		<!-- load gitter notification library -->
 		<script src="libs/gitter/jquery.gritter.js" type="text/javascript"> </script>
 
