--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
 			DocumentUp.document("niki4810/sDashboard");
 		</script>
 	</head>
-	<body>
-
-		<script type="text/javascript">
-			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-		</script>
-		<script type="text/javascript">
-			try {
-				var pageTracker = _gat._getTracker("jquery dashboard, sDashboard, jquery sDashboard, javascript sDashboard, simple dashboard, dashboard widgets");
-				pageTracker._trackPageview();
-			} catch(err) {
-			}
-		</script>
-	</body>
+	<body></body>
 
 </html>
